--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 </head>
 <body>
   <header>
-    <img src="C:\Users\Cristofer Martinez\Desktop\empresa/dulce.jpg" alt="Logo Dulce Sabor" />
+    <img src="empresa/dulce.jpg" alt="Logo Dulce Sabor" />
     <h1>DULCE SABOR</h1>
     <p>Frescura en cada paleta</p>
   </header>
@@ -174,7 +174,7 @@
     <div class="menu">
       <div class="card" tabindex="0">
         <img
-          src="C:\Users\Cristofer Martinez\Desktop\empresa/COCO.jpg"
+          src="empresa/COCO.jpg"
           alt="COCO"
           style="width: 80px; height: 80px; margin-bottom: 1rem"
         />
@@ -183,7 +183,7 @@
       </div>
       <div class="card" tabindex="0">
         <img
-          src="C:\Users\Cristofer Martinez\Desktop\empresa/mango.jpg"
+          src="empresa/mango.jpg"
           alt="Mango"
           style="width: 80px; height: 80px; margin-bottom: 1rem"
         />
@@ -191,17 +191,17 @@
         <p>La mezcla perfecta entre dulce y picosito.</p>
       </div>
       <div class="card" tabindex="0">
-<img src="C:\Users\Cristofer Martinez\Desktop\empresa/nance.jpg" alt="Paleta de nance" width="100">
+<img src="empresa/NANCE.jpg" alt="Paleta de nance" width="100">
         <h3>NANCE</h3>
         <p>Rica paleta refrescante con un dulce sabor a nance.</p>
       </div>
       <div class="card" tabindex="0">
-<img src="C:\Users\Cristofer Martinez\Desktop\empresa/oreo.jpg" alt="Paleta de Oreo" width="100">
+<img src="empresa/OREO.jpg" alt="Paleta de Oreo" width="100">
         <h3>OREO</h3>
         <p>Con trocitos de galleta y leche.</p>
       </div>
       <div class="card" tabindex="0">
-<img src="C:\Users\Cristofer Martinez\Desktop\empresa/mora.jpg" alt="Paleta de mora" width="100">
+<img src="empresa/MORA.jpg" alt="Paleta de mora" width="100">
       
         
         <h3>MORA</h3>
